--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <style>
       body {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        background-color: #0f172a; /* Slate 900 */
-        color: #e2e8f0; /* Slate 200 */
+        background-color: #f8fafc; /* Slate 50 (Light Mode) */
+        color: #1e293b; /* Slate 800 */
         overscroll-behavior: none;
       }
       /* Hide scrollbar for clean mobile look */
@@ -17,10 +17,10 @@
         width: 6px;
       }
       ::-webkit-scrollbar-track {
-        background: #1e293b;
+        background: #f1f5f9;
       }
       ::-webkit-scrollbar-thumb {
-        background: #475569;
+        background: #cbd5e1;
         border-radius: 3px;
       }
     </style>
