feat: Implement dark mode and improve UI aesthetics
This commit introduces dark mode support to the DartsMaster Scorer application. It also includes several UI enhancements across components for a more polished and accessible user experience.

Key changes:
- **Dark Mode:** Configured Tailwind CSS for dark mode, applied dark theme class names to `index.html`, and adjusted component styles (backgrounds, text colors, borders, shadows) to provide a cohesive dark mode experience.
- **Heatmap:** Modified the `DartboardHeatmap` component to dynamically adjust ghost segment colors based on the dark mode state, ensuring visibility of hit data in both themes.
- **Setup:** Updated styling for the game setup screen, including the starting score selection buttons, to integrate with the new dark mode themes.
- **InputPad:** Refreshed button styles in the `InputPad` component to accommodate dark mode and improve visual feedback.
- **Scoreboard:** Enhanced the `Scoreboard` component's appearance with better integration of dark mode colors and updated gradients.
- **General Styling:** Introduced subtle transition effects for color changes and refined various Tailwind class names for improved consistency and readability.

--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DartsMaster Scorer</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        darkMode: 'class',
+      }
+    </script>
     <style>
       body {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        background-color: #f8fafc; /* Slate 50 (Light Mode) */
-        color: #1e293b; /* Slate 800 */
         overscroll-behavior: none;
       }
       /* Hide scrollbar for clean mobile look */
@@ -17,7 +20,7 @@
         width: 6px;
       }
       ::-webkit-scrollbar-track {
-        background: #f1f5f9;
+        background: transparent;
       }
       ::-webkit-scrollbar-thumb {
         background: #cbd5e1;
@@ -35,7 +38,7 @@
 }
 </script>
 </head>
-  <body>
+  <body class="bg-slate-50 dark:bg-slate-950 text-slate-800 dark:text-slate-100 transition-colors duration-300">
     <div id="root"></div>
   </body>
 </html>
